--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.3.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1"
   }
 }
